--- a/index.html
+++ b/index.html
@@ -17,5 +17,13 @@
     <li><img src="SC5.gif" alt="Image 4" /></li>
     <li><img src="SC6.png" alt="Image 5" /></li>
   </ul>
+  <footer class="site-footer">
+    <div class="footer-content">
+        <div class="footer-text">
+        <p>"" <br>- Dawid</p>
+        </div>
+        <img src="SC7.png" alt="Footer Image" class="footer-img" />
+  </div>
+</footer>
 </body>
 </html>
