--- a/miku.html
+++ b/miku.html
@@ -15,15 +15,8 @@
     </nav>
     <button class="dark-mode-toggle" onclick="toggleDarkMode()">Toggle Dark Mode</button>
     <section class="title">
-        <img class="img-Big" src="SC1.gif"/>
+        <img class="img-Big" src="hatsune-miku-dance.gif"/>
     </section>
-  <ul class="image-list">
-    <li><img src="SC2.png" alt="Image 1" /></li>
-    <li><img src="SC3.jpeg" alt="Image 2" /></li>
-    <li><img src="SC4.gif" alt="Image 3" /></li>
-    <li><img src="SC5.gif" alt="Image 4" /></li>
-    <li><img src="SC6.png" alt="Image 5" /></li>
-  </ul>
   <footer class="site-footer">
     <div class="footer-content">
         <div class="footer-text">
